[workspace]
resolver = "2"
members = [
    "ledger",
    "ledger/helpers",
    "metadata",
    "node",
    "pallets/midnight",
    "pallets/c2m-bridge",
    "pallets/cnight-observation",
    "pallets/cnight-observation/mock",
    "pallets/midnight-system",
    "pallets/system-parameters",
    "pallets/system-parameters/rpc",
    "pallets/throttle",
    "pallets/version",
    "primitives/beefy",
    "primitives/ics-observation",
    "primitives/reserve-observation",
    "primitives/midnight",
    "primitives/ledger",
    "primitives/system-parameters",
    "res",
    "runtime",
    "util/toolkit",
    "util/documented",
    "util/aiken-deployer",
    "util/aiken-contracts-lib",
    "tests/e2e",
    "relay",
    "docs",
    "partner-chains/demo/node",
    "partner-chains/toolkit/committee-selection/selection-simulator",
    "partner-chains/toolkit/data-sources/cli",
]
[workspace.package]
license-file = "LICENSE"
edition = "2024"
# This is the partner chains version.
version = "1.8.1"
authors = ["Midnight Foundation"]
homepage = "https://midnight.network"
repository = "https://github.com/midnightntwrk/mn4"

# Same lint list as polkadot-sdk
[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
unwrap_in_result = { level = "warn", priority = 1 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic

[workspace.dependencies]
# Midnight dependencies
# Ledger 7
mn-ledger = { version = "=7.0.3", package = "midnight-ledger" }
ledger-storage = { version = "=1.1.1", package = "midnight-storage", features = ["parity-db"] }
coin-structure = { version = "^2.0.0", package = "midnight-coin-structure" }
onchain-runtime = { version = "=2.0.1", package = "midnight-onchain-runtime" }
base-crypto = { version = "^1.0.0", package = "midnight-base-crypto" }
transient-crypto = { version = "^2.0.0", package = "midnight-transient-crypto" }
zswap = { version = "=7.0.3", package = "midnight-zswap" }
zkir = { version = "^2.1.0", package = "midnight-zkir" }

# Ledger 8 (compatible with layout-v2)
# coin-structure, transient-crypto and zkir share versions with L7 so reuse those entries.
mn-ledger-8 = { version = "=8.1.0-rc.1", package = "midnight-ledger" }
ledger-storage-ledger-8 = { version = "=2.0.1", package = "midnight-storage", features = ["parity-db"] }
onchain-runtime-ledger-8 = { version = "=3.1.0", package = "midnight-onchain-runtime" }
zswap-ledger-8 = { version = "=8.1.0-rc.1", package = "midnight-zswap" }

# Storage core v2 layout
midnight-storage-core = { version = "1.2.0", features = ["layout-v2", "gc-v1"] }

# res can't currently dep on mn-ledger without it bringing in non-std deps (which annoys the runtime).
midnight-serialize = { version = "=1.1.0", package = "midnight-serialize" }

# Midnight local dependencies
midnight-node-ledger = { path = "ledger", default-features = false }
midnight-node-metadata = { path = "metadata", default-features = false }
midnight-node-ledger-helpers = { path = "ledger/helpers", default-features = false, features = ["test-utils"] }
midnight-node-res = { path = "res", default-features = false }
midnight-node-toolkit = { path = "util/toolkit", default-features = true }
pallet-midnight = { path = "pallets/midnight", default-features = false }
pallet-midnight-system = { path = "pallets/midnight-system", default-features = false }
pallet-midnight-rpc = { path = "pallets/midnight/rpc", default-features = false }
pallet-c2m-bridge = { path = "pallets/c2m-bridge", default-features = false }
pallet-cnight-observation = { path = "pallets/cnight-observation", default-features = false }
pallet-cnight-observation-mock = { path = "pallets/cnight-observation/mock", default-features = false }
pallet-version = { path = "pallets/version", default-features = false }
pallet-system-parameters = { path = "pallets/system-parameters", default-features = false }
pallet-throttle = { path = "pallets/throttle", default-features = false }
pallet-system-parameters-rpc = { path = "pallets/system-parameters/rpc", default-features = true }
pallet-federated-authority = { path = "pallets/federated-authority", default-features = false }
pallet-federated-authority-observation = { path = "pallets/federated-authority-observation", default-features = false }
documented = { path = "util/documented", default-features = false }

midnight-node-runtime = { path = "runtime", default-features = false }
midnight-primitives = { path = "primitives/midnight", default-features = false }
midnight-primitives-beefy = { path = "primitives/beefy", default-features = false }
midnight-primitives-ledger = { path = "primitives/ledger", default-features = false }
midnight-primitives-mainchain-follower = { path = "primitives/mainchain-follower", default-features = false }
midnight-primitives-cnight-observation = { path = "primitives/cnight-observation", default-features = false }
midnight-primitives-ics-observation = { path = "primitives/ics-observation", default-features = false }
midnight-primitives-reserve-observation = { path = "primitives/reserve-observation", default-features = false }
midnight-primitives-federated-authority-observation = { path = "primitives/federated-authority-observation", default-features = false }
midnight-primitives-system-parameters = { path = "primitives/system-parameters", default-features = false }

runtime-common = { path = "runtime/common", default-features = false }

# Partnerchains dependencies
partner-chains-db-sync-data-sources = { default-features = false, path = "partner-chains/toolkit/data-sources/db-sync", features = ["block-source", "candidate-source"] }
partner-chains-mock-data-sources = { default-features = false, path = "partner-chains/toolkit/data-sources/mock" }
partner-chains-plutus-data = { default-features = false, path = "partner-chains/toolkit/smart-contracts/plutus-data" }
db-sync-sqlx = { default-features = false, path = "partner-chains/toolkit/utils/db-sync-sqlx" }
cardano-serialization-lib = { default-features = false, version = "15.0.3" }
substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

pallet-sidechain = { default-features = false, path = "partner-chains/toolkit/sidechain/pallet" }

pallet-sidechain-rpc = { default-features = false, path = "partner-chains/toolkit/sidechain/rpc" }
sp-partner-chains-bridge = { default-features = false, path = "partner-chains/toolkit/bridge/primitives" }

pallet-session-validator-management = { default-features = false, path = "partner-chains/toolkit/committee-selection/pallet" }
pallet-session-validator-management-rpc = { default-features = false, path = "partner-chains/toolkit/committee-selection/rpc" }
pallet-partner-chains-bridge = { default-features = false, path = "partner-chains/toolkit/bridge/pallet" }
sp-sidechain = { default-features = false, path = "partner-chains/toolkit/sidechain/primitives" }
sidechain-mc-hash = { default-features = false, path = "partner-chains/toolkit/sidechain/sidechain-mc-hash" }
sidechain-domain = { default-features = false, path = "partner-chains/toolkit/sidechain/domain" }
authority-selection-inherents = { default-features = false, path = "partner-chains/toolkit/committee-selection/authority-selection-inherents" }
sidechain-slots = { default-features = false, path = "partner-chains/toolkit/sidechain/sidechain-slots" }
plutus = { default-features = false, path = "partner-chains/toolkit/utils/plutus" }
sp-session-validator-management = { default-features = false, path = "partner-chains/toolkit/committee-selection/primitives" }
sp-session-validator-management-query = { default-features = false, path = "partner-chains/toolkit/committee-selection/query" }
time-source = { default-features = false, path = "partner-chains/toolkit/utils/time-source" }
pallet-partner-chains-session = { default-features = false, path = "partner-chains/substrate-extensions/partner-chains-session", features = ["pallet-session-compat"] }
sp-partner-chains-consensus-aura = { default-features = false, path = "partner-chains/substrate-extensions/aura/primitives" }
sc-partner-chains-consensus-aura = { default-features = false, path = "partner-chains/substrate-extensions/aura/consensus" }
# Substrate dependencies

binary-merkle-tree = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-beefy = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-beefy-mmr = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-mmr = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
mmr-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
mmr-gadget = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-mmr-primitives = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-preimage = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-tx-pause = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-migrations = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-membership = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-collective = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-scheduler = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-staking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-session = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-version = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-genesis-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-externalities = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
partner-chains-node-commands = { default-features = false, path = "partner-chains/toolkit/cli/node-commands" }
partner-chains-cli = { default-features = false, path = "partner-chains/toolkit/partner-chains-cli" }

substrate-wasm-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

frame-executive = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
frame-benchmarking-cli = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-basic-authorship = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-blockchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-consensus-beefy = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-consensus-slots = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-state-machine = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-tracing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
prometheus-endpoint = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603", package = "substrate-prometheus-endpoint" }

substrate-build-script-utils = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

sc-transaction-pool-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-transaction-pool = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-telemetry = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-service = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-rpc-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-offchain = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-storage-monitor = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-sysinfo = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-chain-spec = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-consensus = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-network = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-executor = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-consensus-grandpa = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-consensus-aura = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-consensus-beefy = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-consensus-slots = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-client-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-cli = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-utils = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-consensus-grandpa-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-consensus-beefy-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-storage = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-keyring = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-crypto-hashing = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

# Backend/Database dependencies
parity-db = "0.5.4"
sc-client-db = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-database = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
scale-info-derive = { version = "2.11.1", default-features = false }

env_logger = "0.11.8"
itertools = { default-features = false, version = "0.14.0", features = ["use_alloc", "use_std"] }

jsonrpsee = { version = "0.24.7", features = ["client-core", "server", "macros"] }

async-trait = { default-features = false, version = "0.1.89" }
futures = { default-features = false, version = "0.3.32", features = ["thread-pool"] }
log = { default-features = false, version = "0.4.29" }
tracing = { default-features = false, version = "0.1.44" }
tracing-subscriber = { version = "=0.3.19", features = ["json", "env-filter"] }
tokio = { version = "1.52.2", features = ["net", "rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
assert_matches = "1.5.0"
hex = { default-features = false, version = "0.4.3", features = ["alloc"] }
hex-literal = { version = "1.1.0", default-features = false }
schemars = { version = "0.8", default-features = false, features = ["derive"] }
serde = { default-features = false, version = "1.0.209", features = ["derive", "alloc"] }
serde_json = { default-features = false, version = '1.0.132', features = ["alloc"] }
serde_valid = { default-features = false, version = "2.0.1" }
clap = { version = "4.5", features = ["env", "derive"] }
lazy_static = { version = "1.4.0", default-features = false }
derive-new = { version = "0.7.0", default-features = false }
figment = { version = "0.10.19", features = ["env", "test"] }
lru = { version = "0.18.0" }
subxt = "0.50.0"
subxt-signer = "0.50.0"
thiserror = { version = "2.0", default-features = false }
zeroize = { version = "1", features = ["derive"] }
rand = { version = "0.10.0", default-features = false }
rayon = "1.11"
sha2 = "0.10.8"
toml = "0.9.0"
bip32 = "0.5.3"
derive-where = "1.5.0"
tempfile = "3.27.0"
impl-trait-for-tuples = "0.2.2"
test-log = "0.2"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "migrate", "bigdecimal"] }
prost = { version = "0.13.5", default-features = false}
reqwest = { version = "0.12.22", default-features = false, features = [ "rustls-tls", "blocking", "json" ] }
strum = { version = "0.28.0", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }

# Partner-chains transitive workspace dependencies
anyhow = "1.0.102"
bigdecimal = { version = "0.4" }
blake2b_simd = { version = "1.0.2", default-features = false }
byte-string-derive = { default-features = false, path = "partner-chains/toolkit/utils/byte-string-derivation" }
cbor_event = { version = "2.4.0" }
cli-commands = { path = "partner-chains/toolkit/cli/commands" }
colored = { version = "3.1.1" }
derive_more = { version = "2.1.1", default-features = false }
ed25519-zebra = { version = "4.2.0" }
envy = { version = "0.4.2" }
fraction = { version = "0.15.3", default-features = false }
inquire = { version = "0.9.4" }
k256 = { version = "0.13.4", default-features = false }
libp2p-identity = "0.2.13"
log4rs = { version = "1.4.0", default-features = false, features = ["console_appender", "file_appender"] }
minicbor = { version = "2.2.1", features = ["alloc"] }
num-bigint = { version = "0.4.3", default-features = false }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.17", default-features = false }
ogmios-client = { path = "partner-chains/toolkit/utils/ogmios-client", default-features = false }
once_cell = { version = "1.21.4", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
plutus-datum-derive = { default-features = false, path = "partner-chains/toolkit/utils/plutus/plutus-datum-derive" }
pretty_assertions = { version = "1.4.1" }
proptest = { version = "1.11.0" }
quickcheck = { version = "1.1.0" }
quickcheck_macros = { version = "1" }
quote = "1.0"
rand_chacha = { version = "0.10.0", default-features = false }
raw-scripts = { git = "https://github.com/input-output-hk/partner-chains-smart-contracts.git", tag = "v8.1.0" }
secp256k1 = { version = "0.30.0", default-features = false }
selection = { path = "partner-chains/toolkit/committee-selection/selection", default-features = false }
testcontainers = { version = "0.27" }
time = { version = "0.3.47", default-features = false }
tokio-retry = { version = "0.3" }
uplc = { version = "1.1.21" }
whisky = { git = "https://github.com/midnightntwrk/whisky", branch = "wasm-bindgen-update" }

# Partner-chains local crates (not directly used but needed for workspace resolution)
partner-chains-demo-runtime = { path = "partner-chains/demo/runtime", default-features = false }
partner-chains-cardano-offchain = { path = "partner-chains/toolkit/smart-contracts/offchain", default-features = false }
sidechain-block-search = { path = "partner-chains/toolkit/sidechain/sidechain-block-search", default-features = false }

# Substrate deps needed by partner-chains
pallet-balances = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-block-builder = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sc-network-test = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-consensus = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
substrate-test-runtime-client = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

# Substrate deps needed by partner-chains demo node and runtime
pallet-transaction-payment-rpc = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }
sp-weights = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2603" }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
# Substrate deps
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
#librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
#libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
#reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }


[patch.crates-io]
yamux = { git = "https://github.com/midnightntwrk/rust-yamux", branch = "yamux-v0.12.2" }
parity-db = { git = "https://github.com/midnightntwrk/parity-db.git", branch = "master" }
midnight-ledger           = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "crate-ledger-8.1.0-rc.1" }
midnight-zswap            = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "zswap-8.1.0-rc.1" }
midnight-transient-crypto = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "transient-crypto-2.1.0-rc.1" }
midnight-onchain-vm       = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "onchain-vm-3.1.0-rc.1" }
midnight-onchain-state    = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "onchain-state-3.1.0-rc.1" }
midnight-onchain-runtime  = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "onchain-runtime-3.1.0-rc.1" }
midnight-serialize        = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "serialize-1.1.0-rc.1" }
midnight-storage-core     = { git = "https://github.com/midnightntwrk/midnight-ledger", tag = "storage-core-1.2.0-rc.3" }

[workspace.metadata.cargo-shear]
ignored = []
