[package]
name = "midnight-node-ledger"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
mn-ledger = { workspace = true, features = ["proving"], optional = true }
base-crypto = { workspace = true, optional = true }
coin-structure = { workspace = true, optional = true }
onchain-runtime = { workspace = true, optional = true }
midnight-serialize = { workspace = true, optional = true }
ledger-storage = { workspace = true, optional = true }
midnight-storage-core = { workspace = true, optional = true }
transient-crypto = { workspace = true, optional = true }
zswap = { workspace = true, optional = true }

mn-ledger-8 = { workspace = true, features = ["proving"], optional = true }
onchain-runtime-ledger-8 = { workspace = true, optional = true }
ledger-storage-ledger-8 = { workspace = true, optional = true }
zswap-ledger-8 = { workspace = true, optional = true }

mn-ledger-hf = { workspace = true, features = ["proving"], optional = true }
base-crypto-hf = { workspace = true, optional = true }
coin-structure-hf = { workspace = true, optional = true }
onchain-runtime-hf = { workspace = true, optional = true }
midnight-serialize-hf = { workspace = true, optional = true }
ledger-storage-hf = { workspace = true, optional = true }
transient-crypto-hf = { workspace = true, optional = true }
zswap-hf = { workspace = true, optional = true }

sp-runtime-interface.workspace = true
sp-runtime.workspace = true
sp-externalities.workspace = true
sp-tracing.workspace = true
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info-derive.workspace = true
frame-support = { workspace = true, default-features = false }
midnight-primitives-ledger = { workspace = true, optional = true }
derive-where = { workspace = true, optional = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
log = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
moka = { version = "0.11.3", optional = true }
toml = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
midnight-node-ledger-helpers = { workspace = true, optional = true }
scale-info.workspace = true

[dev-dependencies]
midnight-node-res = { workspace = true, features = ["test", "chain-spec"] }

[features]
default = [
    "std",
    "test-utils"
]
std = [
    "sp-runtime-interface/std",
    "sp-runtime/std",
    "sp-externalities/std",
    "midnight-primitives-ledger/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "serde/std",
    "serde_json",
    "hex",
    "log",
    "lazy_static",
    "moka",
    "mn-ledger",
    "base-crypto",
    "coin-structure",
    "onchain-runtime",
    "midnight-serialize",
    "ledger-storage",
    "midnight-storage-core",
    "transient-crypto",
    "zswap",
    "mn-ledger-hf",
    "base-crypto-hf",
    "coin-structure-hf",
    "onchain-runtime-hf",
    "midnight-serialize-hf",
    "ledger-storage-hf",
    "transient-crypto-hf",
    "zswap-hf",
    "mn-ledger-8",
    "onchain-runtime-ledger-8",
    "ledger-storage-ledger-8",
    "zswap-ledger-8",
    "sha2",
    "toml",
    "midnight-node-ledger-helpers",
    "derive-where"
]
runtime-benchmarks = []
test-utils = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(substrate_runtime)'] }
