[package]
name = "midnight-beefy-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
mmr-rpc = { workspace = true, default-features = true }
parity-scale-codec = { workspace = true, default-features = true, features = ["derive"]}
subxt = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-consensus-beefy = { workspace = true, default-features = true }
sp-crypto-hashing = { workspace = true, default-features = true }
midnight-node-metadata = { workspace = true, default-features = true }
midnight-primitives-beefy = { workspace = true, default-features = true }
rs_merkle = { git = "https://github.com/midnightntwrk/rs-merkle.git", rev = "7c997a5"}

pallas = "0.33.0"
clap = { workspace = true, default-features = true, features = ["derive", "env"] }
env_logger = "0.11.8"
log = { workspace = true, default-features = true, features = ["kv"] }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
tokio = { workspace = true, default-features = true, features = ["time", "rt-multi-thread"]}